--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,6 +1,7 @@
 .container {
     max-width: 500px;
     width: 90%;
+    max-height: 300vh;
     margin: 0 auto;
     font-size: 2rem;
     font-weight: 600;
